--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.471.1",
 		"qrcode.react": "^4.2.0",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-qr-reader": "^3.0.0-beta-1",
 		"react-router-dom": "^6.21.2",
 		"react-use": "^17.4.3",
