--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [build]
   command = "npm install --legacy-peer-deps && npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
